# fractal-studio

./: Cargo.toml  README.md  check.sh  fractal-studio.js  index.html  sw.js
assets/: manifest.json  sw.js
macros/: Cargo.toml
macros/src/: codegen.rs  lib.rs  parsing.rs
src/: app.rs  example_app.rs  fractal.rs  helpers.rs  main.rs  math.rs  wgsl.rs
src/app/: library.rs  rendering.rs  settings.rs  visualizer.rs  widgets.rs
src/fractal/: julia.rs  lyapunov.rs  mandelbrot.rs  newtons.rs  test_grid.rs
src/wgsl/: julia.wgsl  lyapunov.wgsl  mandelbrot.wgsl  mod.rs  newtons.wgsl  test.wgsl  test_grid.wgsl
