[package]
name = "fractal_visualizer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "macros",
]

[dependencies]
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit", "default_fonts", "wgpu", "persistence",
] }
# version must match eframe's wgpu dependency
wgpu = { version = "0.16.3", features = ["webgl"]}
log = "0.4"
anyhow = "1.0.71"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
type-map = "*"
strum = { version = "0.25", features = ["derive"] }
bytemuck = "1.13.1"
egui_extras = "0.22.0"
rand = "0.8.5"
getrandom = { version = "*", features = ["js"] }
rmp-serde = "1.1.2"
base64 = "0.21.2"
url = "2.4.0"
enum_dispatch = "0.3.12"
encase = { version = "0.6.1", features = ["nalgebra"] }
nalgebra = { version = "0.32.3", features = ["serde-serialize", "convert-bytemuck"] }

fractal_visualizer_macros = { path = "macros" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
