[package]
name = "fractal-studio"
version = "0.2.0"
edition = "2021"

[workspace]
members = [
    ".",
    "macros",
]

[dependencies]
fractal-studio-macros = { path = "macros" }

#todo: update egui to 0.23
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit", "default_fonts", "wgpu", "persistence",
] }
egui_extras = "0.22.0"
egui-notify = "0.9.0"
# version must match eframe's wgpu dependency
wgpu = { version = "0.16.3", features = ["webgl"]}

log = "0.4"
anyhow = "1.0.95"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.5.0"
strum = { version = "0.27.0", features = ["derive"] }
bytemuck = "1.21.0"
rand = "0.9.0"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
rmp-serde = "1.3.0"
base64 = "0.22.1"
url = "2.5.4"
enum_dispatch = "0.3.13"
encase = { version = "0.10.0", features = ["nalgebra"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize", "convert-bytemuck"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
