[package]
name = "fractal-studio"
version = "0.2.0"
edition = "2024"

[workspace]
members = [
    ".",
    "macros",
]

[dependencies]
fractal-studio-macros = { path = "macros" }

eframe = { version = "0.31.0", default-features = false, features = [
    "accesskit", "default_fonts", "web_screen_reader",
    "wgpu", "persistence", "wayland", "x11",
] }

# versions must match!
ecolor = { version = "0.31.0", features = ["color-hex"] }
wgpu = { version = "24.0.1", features = ["webgl"]}
egui_extras = "0.31.0"
egui-notify = "0.19.0"
getrandom_eframe = { package = "getrandom", version = "0.2.1", features = ["js"] }

rand = "0.9.0"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
log = "0.4"
anyhow = "1.0.95"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.5.0"
strum = { version = "0.27.0", features = ["derive"] }
bytemuck = "1.21.0"
rmp-serde = "1.3.0"
base64 = "0.21.7"
url = "2.5.4"
enum_dispatch = "0.3.13"
encase = { version = "0.10.0", features = ["glam"] }
glam = "0.29.2"
num-complex = { version = "0.4.6", features = ["serde", "bytemuck"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
